--- a/style.scss
+++ b/style.scss
@@ -116,7 +116,7 @@ body {
   .row-3 {
     font-family: $medium-font;
     font-size: 0.8rem;
-    height: fit-content;
+    height: 3rem;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -127,10 +127,16 @@ body {
     border-bottom: 1px white solid;
     border-top: 1px white solid;
     background-color: black;
+    z-index: 1;
 
     a {
+      font-size: 1rem;
       color: white;
       text-decoration: none;
+      transition: font-size 0.2s ease-in-out;
+      &:hover {
+        font-size: 1.5rem;
+      }
     }
 
   }
@@ -150,6 +156,31 @@ body {
       border: solid black 2px;
       width: 100%;
       height: 13rem;
+      .overlay {
+        color: white;
+        opacity: 0;
+        transition: opacity 2s ease;
+        height: 100%;
+        width: 100%;
+        background-color: black;
+        &:hover {
+          opacity: 0.70;
+        }
+        a {
+          color: white;
+          transition: font-size 0.2s ease-in-out;
+          &:hover {
+            font-size: 1.2rem;
+          }
+          &:active {
+            transform: scale(1.1);
+          }
+          // to achieve the shrink after touch need to make a js query selector and event listener
+          }
+        h3 {
+          margin: unset;
+        }
+      }
     }
   }
 
