--- a/style.css
+++ b/style.css
@@ -103,9 +103,7 @@ body {
   position: sticky;
   padding: 0.6rem 3rem;
   top: 0;
-  border-bottom: 1px white solid;
-  border-top: 1px white solid;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.65);
   z-index: 1;
 }
 .p-1 .row-3 a {
@@ -186,7 +184,7 @@ body {
 }
 .p-1 .row-5 p {
   font-family: PPNeueMontrealBook, sans-serif;
-  text-align: justify-all;
+  text-align: justify;
   color: white;
   padding: 0.5rem 0 0 0;
   margin: 0;
