--- a/style.scss
+++ b/style.scss
@@ -124,9 +124,7 @@ body {
     position: sticky;
     padding: 0.6rem 3rem;
     top: 0;
-    border-bottom: 1px white solid;
-    border-top: 1px white solid;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.65);
     z-index: 1;
 
     a {
@@ -221,7 +219,7 @@ body {
 
     p {
       font-family: $normal-font;
-      text-align: justify-all;
+      text-align: justify;
       color: white;
       padding: 0.5rem 0 0 0;
       margin: 0;
