--- a/style.scss
+++ b/style.scss
@@ -98,7 +98,7 @@ body {
         font-family: $medium-font;
         text-align: right;
         font-size: 1.5rem;
-        border-right: white 1px solid;
+        //border-right: white 1px solid;
         padding: 1rem;
         margin: 0;
       }
@@ -197,7 +197,7 @@ body {
   }
 
   #furniture-store {
-    background-image: url("img/furniture-store.jpeg");
+    background-image: url("img/furniture-store.png");
     background-size: cover;
     background-position: center;
 
