--- a/style.css
+++ b/style.css
@@ -77,7 +77,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 .p-1 .row-2 .h2-container h2 {
   color: white;
@@ -86,8 +85,6 @@ body {
   font-size: 1.5rem;
   padding: 1rem;
   margin: 0;
-  border-right: white solid 1px;
-
 }
 .p-1 .row-2 .h2-container h3 {
   color: white;
@@ -171,6 +168,11 @@ body {
   background-size: cover;
   background-position: center;
 }
+.p-1 #job-site {
+  background-image: url("img/job-search.png");
+  background-size: cover;
+  background-position: center;
+}
 .p-1 .row-5 {
   height: fit-content;
   padding: 0.5rem 3rem 0 3rem;
@@ -190,6 +192,23 @@ body {
   color: white;
   padding: 0.5rem 0 0 0;
   margin: 0;
+}
+@media (min-width: 1000px) {
+  .p-1 .row-4 {
+    flex-direction: column;
+    align-items: center;
+  }
+  .p-1 .row-4 .project-container {
+    width: 30rem;
+  }
+  .p-1 #about {
+    width: 30rem;
+  }
+  .p-1 #projects-about-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
