--- a/style.scss
+++ b/style.scss
@@ -132,6 +132,7 @@ body {
       color: white;
       text-decoration: none;
       transition: font-size 0.2s ease-in-out;
+
       &:hover {
         font-size: 1.5rem;
       }
@@ -154,6 +155,7 @@ body {
       border: solid black 2px;
       width: 100%;
       height: 13rem;
+
       .overlay {
         color: white;
         opacity: 0;
@@ -161,20 +163,26 @@ body {
         height: 100%;
         width: 100%;
         background-color: black;
+
         &:hover {
           opacity: 0.70;
         }
+
         a {
           color: white;
           transition: font-size 0.2s ease-in-out;
+
           &:hover {
             font-size: 1.2rem;
           }
+
           &:active {
             transform: scale(1.1);
           }
+
           // to achieve the shrink after touch need to make a js query selector and event listener
-          }
+        }
+
         h3 {
           margin: unset;
         }
@@ -200,7 +208,12 @@ body {
     background-image: url("img/furniture-store.png");
     background-size: cover;
     background-position: center;
+  }
 
+  #job-site {
+    background-image: url("img/job-search.png");
+    background-size: cover;
+    background-position: center;
   }
 
   .row-5 {
@@ -226,5 +239,25 @@ body {
 
     }
   }
+
+  @media (min-width: 1000px) {
+    .row-4 {
+      flex-direction: column;
+      align-items: center;
+    }
+    .row-4 .project-container {
+      width: 30rem;
+    }
+    #about {
+      width: 30rem;
+    }
+    #projects-about-container {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+    }
+  }
 }
+
+
 
