--- a/style.scss
+++ b/style.scss
@@ -156,7 +156,14 @@ body {
       width: 100%;
       height: 13rem;
 
+
       .overlay {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        padding-left: 2rem;
+        padding-bottom: 1rem;
+
         color: white;
         opacity: 0;
         transition: opacity 2s ease;
@@ -165,7 +172,7 @@ body {
         background-color: black;
 
         &:hover {
-          opacity: 0.70;
+          opacity: 0.90;
         }
 
         a {
@@ -188,6 +195,12 @@ body {
         }
       }
     }
+  }
+
+  #tom-waits-ipsum {
+    background-image: url("img/tom-waits-ipsum.png");
+    background-size: cover;
+    background-position: top;
   }
 
   #film-quiz {
@@ -242,18 +255,18 @@ body {
 
   @media (min-width: 1000px) {
     .row-4 {
-      flex-direction: column;
+      flex-direction: row;
       align-items: center;
     }
     .row-4 .project-container {
-      width: 30rem;
+      width: 27rem;
     }
     #about {
       width: 30rem;
     }
     #projects-about-container {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       justify-content: center;
     }
   }
